--- a/contact/index.html
+++ b/contact/index.html
@@ -1,1 +1,83 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Test Search Toggle</title>
+<style>
+  body {
+    font-family: 'Oswald', sans-serif;
+    margin: 0; padding: 0;
+  }
+  header {
+    position: sticky;
+    top: 0;
+    background: black;
+    color: white;
+    padding: 16px 24px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    transition: background-color 0.4s ease, color 0.4s ease;
+  }
+  header.active {
+    background: white;
+    color: black;
+  }
+  #searchBarContainer {
+    max-width: 1200px;
+    margin: 0 auto;
+    background: white;
+    padding: 12px 24px;
+    border-bottom: 1px solid #ccc;
+    opacity: 0;
+    max-height: 0;
+    overflow: hidden;
+    transition: opacity 0.4s ease, max-height 0.4s ease;
+  }
+  #searchBarContainer.active {
+    opacity: 1;
+    max-height: 60px;
+  }
+  #searchInput {
+    width: 100%;
+    font-size: 16px;
+    padding: 8px 12px;
+    font-family: 'Oswald', sans-serif;
+  }
+  button {
+    cursor: pointer;
+    background: none;
+    border: none;
+    color: inherit;
+    font-size: 18px;
+  }
+</style>
+</head>
+<body>
 
+<header id="header">
+  <div>MATT SCIANNA</div>
+  <button id="searchIcon" aria-label="Toggle search">🔍</button>
+</header>
+
+<div id="searchBarContainer">
+  <input type="search" id="searchInput" placeholder="SEARCH FOR ITEMS…" />
+</div>
+
+<script>
+  const searchIcon = document.getElementById('searchIcon');
+  const header = document.getElementById('header');
+  const searchBar = document.getElementById('searchBarContainer');
+
+  searchIcon.addEventListener('click', () => {
+    header.classList.toggle('active');
+    searchBar.classList.toggle('active');
+    if (searchBar.classList.contains('active')) {
+      document.getElementById('searchInput').focus();
+    }
+  });
+</script>
+
+</body>
+</html>
