--- a/home/index.html
+++ b/home/index.html
@@ -335,12 +335,33 @@
   <input type="text" id="searchInput" placeholder="Search..." />
 </div>
 
-<div class="image-box" aria-live="polite" aria-label="Product image slider">
+<div class="image-box" aria-live="polite" aria-label="Product image slider" style="position: relative;">
   <div class="slider" id="slider">
     <div class="slide" role="img" aria-label="Slide 1" style="background-image: url('https://raw.githubusercontent.com/mattscianna/mattscianna/main/IMG_1183.png');"></div>
     <div class="slide" role="img" aria-label="Slide 2" style="background-image: url('https://raw.githubusercontent.com/mattscianna/mattscianna/main/IMG_1178.png');"></div>
     <div class="slide" role="img" aria-label="Slide 3" style="background-image: url('https://via.placeholder.com/600x800?text=Slide+3');"></div>
   </div>
+</div>
+
+<!-- New product grid below the carousel -->
+<div id="product-list" style="
+  max-width: 600px;
+  margin: 32px auto;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+  gap: 16px;
+">
+  <div class="product-item" style="text-align: center; cursor: pointer;">
+    <img src="https://raw.githubusercontent.com/mattscianna/mattscianna/main/IMG_1183.png" alt="TWO-FIVE JERSEY - RED" style="width: 100%; height: auto; border-radius: 8px;" />
+    <div style="font-weight: 700; margin-top: 8px; font-size: 14px;">TWO-FIVE JERSEY - RED</div>
+    <div style="font-size: 13px;">$49.99</div>
+  </div>
+  <div class="product-item" style="text-align: center; cursor: pointer;">
+    <img src="https://raw.githubusercontent.com/mattscianna/mattscianna/main/IMG_1178.png" alt="TWO-FIVE JERSEY - WHITE" style="width: 100%; height: auto; border-radius: 8px;" />
+    <div style="font-weight: 700; margin-top: 8px; font-size: 14px;">TWO-FIVE JERSEY - WHITE</div>
+    <div style="font-size: 13px;">$49.99</div>
+  </div>
+  <!-- Add more products here if needed -->
 </div>
 
 <nav id="sidebar" class="sidebar" aria-label="Main navigation" aria-hidden="true" tabindex="-1">
