--- a/home/index.html
+++ b/home/index.html
@@ -6,7 +6,8 @@
   <title>Matt Scianna</title>
   <link href="https://fonts.googleapis.com/css2?family=Cardo:wght@700;900&family=Oswald&display=swap" rel="stylesheet" />
   <style>
-  * {
+  /* RESET */
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -29,7 +30,162 @@ body.cart-open {
   touch-action: none;
 }
 
-/* Sidebar and cart sidebar styling */
+/* HEADER */
+header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 56px;
+  z-index: 2000;
+  background-color: transparent;
+  transition: background-color 0.4s ease, border-bottom 0.4s ease;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.header-container {
+  width: 100%;
+  max-width: 1200px;
+  padding: 0 16px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: transparent;
+  transition: background-color 0.4s ease;
+}
+#logoContainer {
+  font-family: 'Cardo', serif;
+  font-weight: 900;
+  font-size: 22px;
+  cursor: pointer;
+  user-select: none;
+  letter-spacing: 0.5px;
+  color: white;
+  transition: color 0.3s ease;
+}
+.header-icons {
+  display: flex;
+  align-items: center;
+  gap: 24px;
+}
+.icon-btn {
+  background: none;
+  border: none;
+  cursor: pointer;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.icon-btn svg,
+.icon-btn img {
+  width: 20px;
+  height: 20px;
+  filter: invert(1); /* WHITE */
+  transition: filter 0.3s ease;
+}
+
+/* WHEN SEARCH IS ACTIVE */
+header.search-active {
+  background-color: black;
+  border-bottom: 1px solid #222;
+}
+header.search-active .header-container {
+  background-color: white;
+}
+header.search-active #logoContainer {
+  color: black;
+}
+header.search-active .icon-btn svg,
+header.search-active .icon-btn img {
+  filter: invert(0); /* BLACK */
+}
+
+/* SEARCH BAR */
+#searchBarContainer {
+  position: fixed;
+  top: 56px;
+  left: 0;
+  right: 0;
+  max-height: 0;
+  opacity: 0;
+  overflow: hidden;
+  background-color: white;
+  border-top: 1px solid #eee;
+  transition: max-height 0.4s ease, opacity 0.4s ease, padding 0.4s ease;
+  z-index: 1900;
+  padding: 0 16px;
+}
+#searchBarContainer.active {
+  max-height: 60px;
+  opacity: 1;
+  padding: 8px 16px;
+}
+#searchInput {
+  width: 100%;
+  padding: 10px 16px;
+  font-size: 16px;
+  font-family: 'Oswald', sans-serif;
+  background: white;
+  border: none;
+  color: black;
+  outline: none;
+}
+
+/* IMAGE CAROUSEL */
+.image-box {
+  margin: 0 auto 32px;
+  width: 100%;
+  max-width: 600px;
+  aspect-ratio: 3 / 4;
+  background: black;
+  overflow: hidden;
+  position: relative;
+  z-index: 1;
+}
+.slider {
+  display: flex;
+  width: 300%;
+  height: 100%;
+  transition: transform 0.5s ease-in-out;
+}
+.slide {
+  flex: 0 0 100%;
+  background-size: cover;
+  background-position: center;
+}
+
+/* PRODUCT GRID */
+#product-list {
+  max-width: 600px;
+  margin: 32px auto;
+  padding: 0 16px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(140px, 1fr));
+  gap: 16px;
+}
+.product-item {
+  text-align: center;
+  cursor: pointer;
+}
+.product-item img {
+  width: 100%;
+  height: auto;
+  border-radius: 8px;
+}
+.product-item div {
+  margin-top: 8px;
+}
+.product-item div:first-of-type {
+  font-weight: 700;
+  font-size: 14px;
+}
+.product-item div:last-of-type {
+  font-size: 13px;
+}
+
+/* SIDEBARS */
 .sidebar,
 .cart-sidebar {
   position: fixed;
@@ -65,7 +221,7 @@ body.cart-open {
   pointer-events: auto;
 }
 
-/* Close button */
+/* CLOSE BUTTONS */
 .close-btn {
   position: absolute;
   top: 17px;
@@ -91,106 +247,7 @@ body.cart-open {
 .close-btn::before { transform: rotate(45deg); }
 .close-btn::after { transform: rotate(-45deg); }
 
-/* Header */
-header {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  height: 56px;
-  background-color: transparent;
-  z-index: 2000;
-  border-bottom: none;
-  transition: background-color 0.4s ease, border-bottom 0.4s ease;
-  padding: 0 16px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  user-select: none;
-}
-header.active-search-bg {
-  background-color: white;
-  border-bottom: 1px solid #eee;
-  /* white background layered underneath icons */
-}
-
-/* Header container with icons and logo */
-.header-container {
-  max-width: 1200px;
-  margin: 0 auto;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  width: 100%;
-}
-
-/* Logo */
-#logoContainer {
-  font-family: 'Cardo', serif;
-  font-weight: 900;
-  font-size: 22px;
-  cursor: pointer;
-  user-select: none;
-  letter-spacing: 0.5px;
-  transition: color 0.3s ease;
-  color: black;
-}
-
-/* Icons container */
-.header-icons {
-  display: flex;
-  align-items: center;
-  gap: 24px;
-}
-
-/* Icon buttons */
-.icon-btn {
-  background: none;
-  border: none;
-  cursor: pointer;
-  padding: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  transition: filter 0.3s ease;
-}
-
-/* Icons default - black */
-.icon-btn svg,
-.icon-btn img {
-  width: 20px;
-  height: 20px;
-  filter: invert(0);
-  transition: filter 0.3s ease;
-}
-
-/* When search is active: header background is black, but inner container has white bg */
-/* Icons and logo inside container turn black for contrast */
-header.search-active {
-  background-color: black;
-  border-bottom: 1px solid #222;
-  color: white;
-}
-header.search-active .header-container {
-  background-color: white;
-  z-index: 2001;
-  padding: 0 16px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-/* Logo black on white container */
-header.search-active #logoContainer {
-  color: black;
-  transition: color 0.3s ease;
-}
-/* Icons black on white container */
-header.search-active .icon-btn svg,
-header.search-active .icon-btn img {
-  filter: invert(0);
-}
-
-/* Cart count */
+/* CART COUNTER */
 #cartCount {
   position: absolute;
   top: -6px;
@@ -204,64 +261,7 @@ header.search-active .icon-btn img {
   display: none;
 }
 
-/* Search bar container - overlays carousel */
-#searchBarContainer {
-  position: fixed;
-  top: 56px; /* just below fixed header */
-  left: 0;
-  right: 0;
-  max-height: 0;
-  opacity: 0;
-  overflow: hidden;
-  background-color: rgba(0, 0, 0, 0.85); /* semi-transparent black */
-  border-top: 1px solid #222;
-  transition: max-height 0.4s ease, opacity 0.4s ease, padding 0.4s ease;
-  padding: 0 16px;
-  z-index: 2100; /* above header and carousel */
-}
-#searchBarContainer.active {
-  max-height: 60px;
-  opacity: 1;
-  padding: 8px 16px;
-}
-
-/* Search input */
-#searchInput {
-  width: 100%;
-  padding: 10px 16px;
-  border: none;
-  font-size: 16px;
-  font-family: 'Oswald', sans-serif;
-  background: transparent;
-  color: white;
-  outline-offset: 2px;
-  outline-color: #fff;
-}
-
-/* Image box and slider */
-.image-box {
-  margin: 0 auto 32px; /* no top margin */
-  width: 100%;
-  max-width: 600px;
-  aspect-ratio: 3 / 4;
-  background: black;
-  overflow: hidden;
-  position: relative;
-  z-index: 1; /* below search bar */
-}
-.slider {
-  display: flex;
-  width: 300%;
-  height: 100%;
-  transition: transform 0.5s ease-in-out;
-}
-.slide {
-  flex: 0 0 100%;
-  background-size: cover;
-  background-position: center;
-}
-
-/* Sidebar links */
+/* SIDEBAR LINKS */
 .sidebar a {
   display: block;
   padding: 12px 16px;
@@ -275,7 +275,7 @@ header.search-active .icon-btn img {
   background-color: #f0f0f0;
 }
 
-/* Policies arrow */
+/* POLICIES DROPDOWN */
 .policies-link.arrow-closed::after {
   content: "▼";
   float: right;
@@ -286,8 +286,6 @@ header.search-active .icon-btn img {
   float: right;
   transition: transform 0.3s ease;
 }
-
-/* Policies dropdown */
 .policies-dropdown {
   display: none;
   margin-left: 12px;
@@ -303,7 +301,7 @@ header.search-active .icon-btn img {
   padding: 6px 16px;
 }
 
-/* Cart content */
+/* CART CONTENT */
 .cart-content {
   font-family: 'Oswald', sans-serif;
 }
@@ -355,7 +353,7 @@ header.search-active .icon-btn img {
   font-size: 18px;
 }
 
-/* Responsive */
+/* RESPONSIVE */
 @media (max-width: 767px) {
   .cart-sidebar,
   .sidebar {
@@ -364,7 +362,6 @@ header.search-active .icon-btn img {
     padding: 80px 16px;
   }
   .image-box {
-    margin-top: 0;
     padding: 0 16px;
   }
   .sidebar a {
@@ -376,7 +373,8 @@ header.search-active .icon-btn img {
     border-left: none;
   }
 }
-</style>
+<style>
+<body>
 
 <!-- Header -->
 <header id="mainHeader">
